# Conjugate-Hylomorphisms

./: README.md  conjugateHylomorphisms.cabal
src/: CH.hs
